# r0astr

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  CNAME  MIGRATION-SUMMARY.md  README.md  TODO-drag-reorder.md  TODO-electron-releases.md  TODO-lite-build.md  TODO.md  electron-builder.json  index.html  index.html.backup  migrate-bmad.cjs  mkdocs.yml  package-lock.json  package.json  playwright.config.js  pyproject.toml  remote.html  requirements.txt  server.config.example.json  test-eventbus.html  vite.config.lite.mjs  vite.config.mjs  zensical.toml
.claude/: piatra.json
.claude/docs/: ui-refactor-plan.md
.github/workflows/: build-electron.yml  ci.yml  create-release.yml  deploy-pages.yml  detect-version.yml  docs.yml  docs.yml.disabled  release.yml  semantic-release.yml
bmad/: brownfield-architecture.md  remote-control.md
bmad-archive/: README.md
bmad-archive/bmad/: remote-control.md
bmad/architecture/: button-system-usage.md  frontend-architecture.md  index.md  strudel-integration-gotchas.md  ui-redesign-strategy.md
bmad/docs/: index.html
bmad/prd/: epic-1-dynamic-panel-management.md  epic-7-text-panel-improvements.md  (+1 more)
build-resources/: README.md  entitlements.mac.plist
docs/: .gitignore  404.html  electron-build.md  index.html  search.json  sitemap.xml
docs-source/: downloads.md  examples.md  getting-started.md  index.md  remote-control.md  usage.md
docs/learn/: index.html
electron/: main.cjs  preload.cjs
public/: starter-layout.json
site/: mkdocs.yml
src/: main.js  serverConfig.mjs  snippets.json  state.js  websocket-server.mjs
(+307 files in other folders)
