[project]
name = "r0astr"
version = "0.8.1"
description = "r0astr - Multi-instrument live coding interface built on Strudel"
authors = [
    {name = "Peter Kalt",email = "peter.kalt@piatra.com.au"}
]
license = {text = "AGPL-3.0-or-later"}
readme = "README.md"
requires-python = "^3.9"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.docs.dependencies]
mkdocs-material = "^9.7.0"

